canary-testing/v1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: test-haproxy-ingress-v1
  labels:
    name: blue
    app: test-haproxy-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-haproxy-ingress
      group: blue
  template:
    metadata:
      labels:
        app: test-haproxy-ingress
        group: blue
    spec:
      containers:
      - name: joom-rf-primary-receiver-openresty
        image: "docker.joom.it/rf-receiver-openresty:latest"
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
          - name: metrics
            containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/rf-receiver/nginx/
      volumes:
        - name: nginx-conf
          configMap:
            name: test-ingress-nginx-conf-cfgmap
