canary-testing/v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ingress-svc
  namespace: test-haproxy-ingress-v1
  labels:
    name: test-ingress-svc
    app: test-haproxy-ingress
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: metrics
  selector:
    app: test-haproxy-ingress
